welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:3: error: type mismatch;
 found   : Unit
 required: Int
	for (k <- 0 to 4){
               ^