welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfMaxValue(nums:Array[Int] ,value:Int): Int = {
	var n:Int=nums.length
	for (k <- 0 to 4){
		if (value==nums(k)){
			return k
		} else {
			return -1
		}
	}
}
